Fix some wrong color notations

--- a/public/wp-content/themes/moustache/src/scss/01-settings/_colors.scss
+++ b/public/wp-content/themes/moustache/src/scss/01-settings/_colors.scss
@@ -2,7 +2,7 @@
   # COLORS
 \*------------------------------------*/
 
-$c-black: hsl(0 0 0%);
+$c-black: hsl(0 0% 0%);
 $c-grey: hsl(0 0% 96%);
 $c-mine-shaft: hsl(0 0% 18%);
 $c-monza: hsl(357 73% 49%);
